# autogen-multi-agent-control-room

./: .env.example  README.md  docker-compose.yml  pyproject.toml
config/: manifest.json
configs/: project.json
data/: README.md
demo/: styles.css
docs/: architecture.md  deployment.md  index.html  runbook.md
outreach/: email_to_authors.md
research/: improvement_plan.md  innovation_memo.md  sources.md  upstream_audit.md  upstream_snapshot.json
social/: linkedin_post.md  publish_checklist.md
src/app/web/: index.html
tests/: test_smoke.py
